2024-10-10  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-wait-for-regexp):
	* tramp-message.el (tramp-error-with-buffer, tramp-user-error):
	Don't redisplay in `sit-for'.  (Bug#73718)

2024-10-03  Stefan Kangas  <stefankangas@gmail.com>

	* tramp.el (tramp-temp-buffer-file-name): Prefer defvar-local
	where possible, and the package does not support Emacs 24.3 or
	earlier.

2024-09-25  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-file-name-handler): Adapt `tramp-verbose' when
	completing host names.

	* tramp-integration.el (tramp-syntax): Declare.
	(shortdoc): Check, that Tramp has `default' syntax.

2024-09-23  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-otp-password-prompt-regexp): Add TACC HPC prompt.

2024-09-21  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-wait-for-regexp): Use (sit-for 0) in order to
	avoid performace regression.

2024-09-10  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-wait-for-regexp): Add (sit-for 0.005) prior
	calling `tramp-accept-process-output'.  This avoids 100% CPU load.
	(Bug#73046)

2024-09-09  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-file-name*): Embed `function-put' calls with
	`tramp--with-startup'.
	(tramp-active-command-completion-p)
	* tramp-cache.el (tramp-get-hash-table): Remove declare form.  Add
	`tramp-suppress-trace' function property.

2024-08-27  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-mode): Make it a defvar.  People shouldn't
	customize it manually.

2024-08-26  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-active-command-completion-p): New defun.

	* tramp-cmds.el (tramp-cleanup-connection)
	(tramp-cleanup-all-connections, tramp-cleanup-some-buffers)
	(tramp-cleanup-all-buffers, tramp-rename-files):
	* tramp-message.el (tramp-setup-debug-buffer):
	Declare `completion'.

	* tramp-integration.el (tramp-info-link): New widget.
	(tramp-widget-info-link-action): New defun.
